--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "db:seed:preview": "ENVIRONMENT=preview tsx prisma/seed.ts",
     "db:seed:production": "ENVIRONMENT=production tsx prisma/seed.ts",
     "db:validate": "tsx scripts/validate-seed-data.ts",
-    "db:health": "tsx scripts/db-health-check.ts",
+    "db:health": "npx tsx scripts/db-health-check.ts",
     "db:ci-validate": "tsx scripts/ci-data-validation.ts",
     "db:reset": "prisma db push --force-reset && npm run db:seed",
     "db:studio": "prisma studio",
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
-    "@prisma/client": "^6.16.2",
+    "@prisma/client": "^6.18.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -50,6 +50,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "confbox": "^0.2.2",
     "dotenv": "^17.2.2",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.542.0",
